// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: BookCover should match its empty snapshot 1`] = `
<div
  className="book-cover"
  style={
    Object {
      "backgroundImage": "url(\\"http://via.placeholder.com/128x192\\")",
      "height": 192,
      "width": 128,
    }
  }
/>
`;

exports[`Component: BookCover should render the props 1`] = `
<div
  className="book-cover"
  style={
    Object {
      "backgroundImage": "url(\\"test-url\\")",
      "height": 200,
      "width": 100,
    }
  }
/>
`;
